[fix] client: align modal to bottom in mobile

--- a/public/s/styles/scss/style.scss
+++ b/public/s/styles/scss/style.scss
@@ -504,12 +504,16 @@ button {
         table-layout: fixed;
         height: 100%;
         margin: auto;
+
+        @media #{$mobile-break-point} { width: 100%; }
     }
 
     &-wrapper {
         position: relative;
         display: table-cell;
         vertical-align: middle;
+
+        @media #{$mobile-break-point} { vertical-align: bottom; }
 
         > .modal {
             position: relative;
